--- a/src/main/resources/data/festive_times/recipes/wrapping_paper.json
+++ b/src/main/resources/data/festive_times/recipes/wrapping_paper.json
@@ -1,3 +1,19 @@
 {
-  "type": "festive_times:wrapping_paper_serializer"
+  "type": "minecraft:crafting_shaped",
+  "pattern": [
+    "###",
+    "#d#",
+    "###"
+  ],
+  "key": {
+    "#": {
+      "item": "minecraft:paper"
+    },
+    "d": {
+      "tag": "forge:dyes"
+    }
+  },
+  "result": {
+    "item": "festive_times:wrapping_paper"
+  }
 }
